# mycobot320_moveit

./: README.md
src/: astra_capture.py  yolo_test.py
src/adaptive_gripper_config/: .setup_assistant  CMakeLists.txt  package.xml
src/adaptive_gripper_config/config/: firefighter.ros2_control.xacro  firefighter.srdf  firefighter.urdf.xacro  firefighter.urdf.xacro_bak  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers (copy).yaml  ros2_controllers.yaml
src/adaptive_gripper_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/astra_yolo_bridge/: package.xml  setup.cfg  setup.py
src/astra_yolo_bridge/astra_yolo_bridge/: astra_yolo_node.py  cube_controller.py  cube_controller.py_bak  cube_controller.py_org  cube_picker.py
src/astra_yolo_bridge/launch/: bringup.launch.py
src/mycobot/mycobot_hardware_interface/include/mycobot_hardware_interface/: hardware_interface.hpp
src/mycobot/mycobot_hardware_interface/src/: hardware_interface.cpp
src/ros2_astra_camera/: README.MD
src/ros2_astra_camera/astra_camera/launch/: astra.launch.py  multi_astra_mini.launch.py
src/ros2_astra_camera/astra_camera/params/: astra_mini_params.yaml
