<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astra_yolo_bridge</name>
  <version>0.0.1</version>
  <description>Bridge node: Astra(ROS2) + YOLO + ESP32 serial</description>
  <maintainer email="kimcastle9710@gmail.com">han</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


